--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
     <section id="boxes">
         <div class="container">
             <div class="box">
-                <img src="C:\Users\ELIZABETH\Downloads\estructura html\estructura html\guitarra.jpg" alt="Guitarra">
+                <img src="guitarra.jpg" alt="Guitarra">
                 <h3>Guitarras</h3>
                 <p>Amplia selección de guitarras acústicas y eléctricas</p>
             </div>
             <div class="box">
-                <img src="C:\Users\ELIZABETH\Downloads\estructura html\estructura html\pianos-electricos.jpg" alt="Piano">
+                <img src="pianos-electricos.jpg" alt="Guitarra">
                 <h3>Pianos</h3>
                 <p>Pianos acústicos y digitales de las mejores marcas</p>
             </div>
             <div class="box">
-                <img src="C:\Users\ELIZABETH\Downloads\estructura html\estructura html\bateria.jpg" alt="Batería">
+                <img src="bateria.jpg" alt="Guitarra">
                 <h3>Baterías</h3>
                 <p>Baterías acústicas y electrónicas para todos los niveles</p>
             </div>
